--- a/myfitnessapp/pubspec.yaml
+++ b/myfitnessapp/pubspec.yaml
@@ -27,11 +27,17 @@ dependencies:
   firebase_core: ^1.10.0
   flutter:
     sdk: flutter
+  flutter_datetime_picker: ^1.5.1
   fluttertoast: ^8.0.8
   ionicons: ^0.1.2
   json_annotation: ^4.4.0
   json_serializable: ^6.1.1
+  list_treeview: ^0.3.0
+  scrollable_positioned_list: ^0.2.1
   shared_preferences: ^2.0.11
+  syncfusion_flutter_calendar: ^19.3.59
+  syncfusion_flutter_datepicker: ^19.3.59
+  table_calendar: ^3.0.3
   
 
 dev_dependencies:
@@ -50,7 +56,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/exerciseJSON.json
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
